# libexcel

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  TODO
include/: biffwriter.h  bsdqueue.h  excel.h  format.h  formula.h  hashhelp.h  io_handler.h  olewriter.h  stream.h  workbook.h  worksheet.h
msvc/: libexcel.dsp
src/: Makefile  Makefile.lccw32  Makefile.mingw  biffwriter.c  format.c  formula.c  hashhelp.c  io_handler.c  olewriter.c  stream.c  workbook.c  worksheet.c
tests/: CMakeLists.txt  Makefile  Makefile.mingw  example1.c  example2.c  example3.c  merge1.c
